Fix app height on mobile

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/app.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/app.component.scss
@@ -6,9 +6,19 @@
 
 @import 'src/variables';
 
+// Set height of the app to 100% so that the app will fill the entire screen.
+// Don't use 100vh because that will cause the app to be too tall on mobile devices when the browser's address bar is
+// visible.
+// Newer browsers support dvh (dynamic viewport height) units, but they are not supported in Safari 15.4 and Chrome 108.
+// Setting the height to 100% seems to work just as well.
+::ng-deep html,
+::ng-deep body,
+:host {
+  height: 100%;
+}
+
 :host {
   display: flex;
-  height: 100vh;
   position: relative;
 
   > mat-progress-bar {
